# LLM-Specialization-Platform

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
configs/: README.md  base_config.yaml  dpo_config.yaml  eval_config.yaml  sft_config.yaml
configs/schemas/: extraction_schema.json
results/v2/: README.md  metrics.json  model_card.md  qualitative_samples.json  report.md
scripts/: README.md  audit_labels.py  bootstrap_instance.sh  evaluate.py  export.py  filter_preferences.py  generate_dataset.py  generate_preferences.py  prepare_dataset.py  relabel_dataset.py  setup_instance.sh  start_eval.sh  tokenizer_audit.py  train_dpo.py  train_sft.py
src/: config.py
src/data/: dataset_builder.py  decontamination.py  labeling.py  preference_builder.py  storage.py
src/evaluation/: harness.py  metrics.py  regression.py  report.py
src/evaluation/providers/: hf_provider.py  llamacpp_provider.py  ollama_provider.py  tgi_provider.py  vllm_provider.py
src/export/: exporter.py
src/manifest/: run_manifest.py
src/tokenizer/: audit.py
src/tracking/: tracker.py
src/training/: dpo_trainer.py  sft_trainer.py
templates/: model_card.md
tests/: test_data.py  test_harness.py  test_integration.py  test_labeling.py  test_manifest.py  test_metrics.py  test_preference_builder.py  test_report.py
tests/fixtures/: sample.jsonl
