[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "llm-specialization-platform"
version = "1.0.0"
description = "End-to-end QLoRA/DPO fine-tuning pipeline for task-specialized LLMs"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
